<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/iv_show_selected_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/selected_image"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/camera" />

        <TextView
            android:id="@+id/top_prediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"
            android:textColor="#3195E4"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_show_selected_image"
            tools:text="@string/lhass" />

        <TextView
            android:id="@+id/next4_preds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="center"
            android:textColor="#3170A3"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_prediction"
            tools:text="@string/afghan_50_hound_30" />

        <Button
            android:id="@+id/btn_capture_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#22AFA1"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:text="@string/capture_image"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/btn_select_image"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/purple_200"
            android:padding="12dp"
            android:text="@string/select_image_from_gallery"
            app:layout_constraintBottom_toTopOf="@id/btn_predict"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_predict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#4CAF50"
            android:padding="12dp"
            android:text="@string/predict_dog_breed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>